Refactor: Resolve SonarQube issues and centralize messages (#21)
* Refactor: Add centralized timezone clock, AOP logging, and custom email validation

* Refactor: Move workspace validation to WorkspaceValidationUtils and standardize Member API responses

* Refactor: Move project validation to ProjectValidationUtils

* Refactor: Move feature flag validation to FeatureFlagValidationUtils and standardise responses

* Refactor: Move url shortener validation to UrlShortenerValidationUtils and standardise responses

* Refactor: Move webhook logic to WebhookService and standardise responses

* Refactor: Standardise Notification API responses

* Refactor: Standardise Analytics API responses

* refactor: resolve remaining SonarQube issues and centralize messages